--- a/style.css
+++ b/style.css
@@ -83,32 +83,50 @@ header h1 {
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    flex-basis: auto;
 }
 
 .risultati-unita {
     background-color: black;
     color: white;
     flex: 1;
+    align-self: stretch;
+    padding: 5px;
+    padding-left: 20px;
+    position: relative;
 }
 
-.risultati-unita p {
+.risultati-unita div {
     font-family: 'Montserrat';
     font-weight: 900;
     font-size: 1.5em;
     text-transform: uppercase;
+
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
 
 .risultati-tempo {
     border: 1px solid black;
     color: black;
-    flex: 2;
+    flex: 1;
+    align-self: stretch;
+    padding: 5px;
+    padding-left: 20px;
 }
 
 .risultati-tempo p {
-    
+    font-family: 'Montserrat';
+    font-size: 1.5em;
+    text-transform: uppercase;
 }
 
+.text-small {
+    font-size: 0.5em;
+}
 
 /* ::: MAIN ::: */
 main {
@@ -176,6 +194,18 @@ footer .copyright {
         width: 300px;
         margin: auto;
     }
+
+    .risultati-tempo p {
+        font-size: 0.8em;
+    }
+
+    .risultati-unita div {
+        font-size: 0.8em;
+    }
+
+    .text-small {
+        font-size: 0.75em;
+    }
 }
 
 @media only screen and (min-width: 540px) {
@@ -194,6 +224,14 @@ footer .copyright {
         width: 500px;
         margin: auto;
     }
+
+    .risultati-tempo p {
+        font-size: 1.5em;
+    }
+
+    .risultati-unita div {
+        font-size: 1.5em;
+    }
 }
 
 @media only screen and (min-width: 960px) {
@@ -211,6 +249,14 @@ footer .copyright {
     .container {
         width: 900px;
         margin: auto;
+    }
+
+    .risultati-tempo p {
+        font-size: 1.75em;
+    }
+
+    .risultati-unita div {
+        font-size: 1.75em;
     }
 }
 
